# hfl

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  LICENSE-DEPENDENCIES.md  LICENSE-FAQ.md  NOTICE  NOTICE-EU-AI-ACT.md  OLLAMA_PARITY_PLAN.md  OLLAMA_PARITY_PLAN_V2.md  PRIVACY.md  README.es.md  README.md  SAFEGUARDS.md  SECURITY.md  docker-compose.yml  hfl.spec  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-executables.yml  ci.yml  docker.yml  homebrew.yml  license-check.yml  lint.yml  macos-dmg.yml  pages.yml  publish-pypi.yml  release.yml  security.yml  test.yml  windows-msi.yml
docs/: env-vars.md  hfl-architecture-complete.html  hfl-arquitectura-completa.html  hub-native-features.md  v4.md
docs/adr/: 0001-singleton-pattern.md  0002-async-api-sync-engines.md  0003-gguf-default-format.md  0004-ollama-compatibility.md  0005-license-classification.md  0006-rate-limiting-strategy.md  template.md
packaging/homebrew/: hfl.rb
packaging/windows/: LICENSE.rtf  hfl.wxs
scripts/: build_executable.sh  ci-local.sh  fix_all.sh  local-smoke.sh
src/hfl/: __init__.py  config.py  events.py  exceptions.py  logging_config.py  metrics.py  plugins.py  security.py  validators.py
src/hfl/api/: __init__.py  admin_guard.py  agent_loop.py  chat_core.py  converters.py  deprecation.py  errors.py  exception_handlers.py  helpers.py  image_validator.py  middleware.py  model_loader.py  rate_limit.py  routes_anthropic.py  routes_batch.py  routes_benchmark.py  routes_blobs.py  routes_compliance.py  routes_copy.py  routes_create.py  routes_discover.py  routes_draft.py  routes_embed.py  routes_health.py  routes_images.py  routes_lora.py  routes_metrics.py  routes_native.py  routes_openai.py  routes_openai_responses.py  routes_ps.py  routes_pull.py  routes_push.py  routes_recommend.py  routes_show.py  routes_smart_pull.py  routes_snapshot.py  routes_stop.py  routes_transcribe.py  routes_tts.py  (+11 more)
src/hfl/api/schemas/: __init__.py  anthropic.py  ollama.py  openai.py  tts.py
src/hfl/cli/: __init__.py  main.py
src/hfl/cli/commands/: __init__.py  _utils.py  doctor.py
src/hfl/converter/: __init__.py  formats.py  gguf_converter.py  go_template.py  modelfile.py  modelfile_parser.py  requires_check.py
src/hfl/core/: __init__.py  container.py  observability_setup.py  sandbox.py  sessions.py  tracing.py
src/hfl/engine/: __init__.py  async_wrapper.py  bark_engine.py  base.py  benchmark.py  coqui_engine.py  dependency_check.py  diffusers_engine.py  dispatcher.py  embedding_engine.py  embedding_pooling.py  failover.py  llama_cpp.py  lora.py  memory.py  mlx_engine.py  model_pool.py  observability.py  prompt_builder.py  prompt_cache.py  selector.py  snapshot.py  transformers_engine.py  verifier.py  vllm_engine.py  vram.py  whisper_engine.py
src/hfl/hub/: __init__.py  auth.py  blobs.py  chat_template_repair.py  client.py  discovery.py  downloader.py  draft_picker.py  hw_profile.py  license_checker.py  quant_table.py  recommend.py  resolver.py  smart_pull.py  uploader.py
src/hfl/i18n/: __init__.py
src/hfl/i18n/locales/: en.json  es.json
src/hfl/mcp/: __init__.py  client.py  server.py
src/hfl/models/: __init__.py  capabilities.py  manifest.py  provenance.py  registry.py
src/hfl/models/backends/: __init__.py  base.py  file.py  sqlite.py
src/hfl/observability/: __init__.py  audit.py  signing.py  tracing.py
src/hfl/tools/: __init__.py  web_fetch.py  web_search.py
src/hfl/tray/: __init__.py  controller.py  icon.py
src/hfl/utils/: __init__.py  circuit_breaker.py  duration.py  retry.py
tests/: __init__.py  conftest.py  test_admin_guard.py  test_agent_loop.py  test_api.py  test_api_auth.py  test_api_contracts.py  test_api_model_loading.py  test_api_schemas.py  test_async_wrapper.py  test_audit.py  test_audit_log.py  test_auth.py  test_baked_messages.py  test_blobs.py  test_capabilities.py  test_chat_core.py  test_chat_format_detection.py  test_chat_template_repair.py  test_circuit_breaker.py  test_cli.py  test_cli_commands.py  test_cli_extended.py  test_cli_helpers.py  test_cli_signal.py  test_cli_smoke.py  test_cli_v4_commands.py  test_concurrency.py  test_concurrency_contract.py  test_concurrency_regression_safety.py  test_config.py  test_config_env.py  test_container.py  test_context_legacy.py  test_conversion_caching.py  test_converter.py  test_converter_edge_cases.py  test_converter_extended.py  test_converters.py  test_dependency_check.py  (+165 more)
tests/stress/: __init__.py  test_concurrent_streaming.py  test_model_pool_stress.py
